--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <div class="Interactive Dancing Robot"> 
       <p><font color="White"><u>Chapter 6+7 Interactive Dancing Robot</u></p>
-      <img src="DancingRobotDougles" class="img-responsive" style="width:100%" alt="DancingRobot">
+      <img src="DancingRobotDougles.jpg" class="img-responsive" style="width:100%" alt="DancingRobot">
     </div>
 
     <div class="DreamCar">
