--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <div class="AsusRog"> 
       <p><font color="White"><u>Chapter 5 ASUS ROG Background List</U</p>
-      <img src="InteractiveList.jpg" class="img-responsive" style="width:100%" alt="AsusROGBackgroungList">
+      <img src="AsusInteractiveList.jpg" class="img-responsive" style="width:100%" alt="AsusROGBackgroungList">
     </div>
 
     <div class="Interactive Dancing Robot"> 
