--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <div class="DanceParty"> 
       <p><font color="White"><u>Chapter 10 Dance Party</font color></u></p>
-      <img src="DanceParty.jpg" class="img-responsive" style="width:100%" alt="DanceParty">
+      <img src="DouglesDanceParty.jpg" class="img-responsive" style="width:100%" alt="DanceParty">
     </div>
 
     <div class="OrderedList"> 
