--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 
     <div class="AsusRog"> 
       <p><font color="White"><u>Chapter 5 ASUS ROG Background List</U</p>
-      <img src="InteractiveList.jpg" class="img-responsive" style="width:100%" alt="AsusROGBackgroungList">
+      <img src="AsusInteractiveList.jpg" class="img-responsive" style="width:100%" alt="AsusROGBackgroungList">
     </div>
 
     <div class="Interactive Dancing Robot"> 
       <p><font color="White"><u>Chapter 6+7 Interactive Dancing Robot</u></p>
-      <img src="DancingRobot.jpg" class="img-responsive" style="width:100%" alt="DancingRobot">
+      <img src="DancingRobotDougles.jpg" class="img-responsive" style="width:100%" alt="DancingRobot">
     </div>
 
     <div class="DreamCar">
